crates/backyard-parser/tests/snapshots/parenthesis__basic.snap
---
source: crates/backyard-parser/tests/parenthesis.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator:
      - 61
    right:
      node_type: bin
      left:
        node_type: number
        value:
          - 53
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 1
            column: 5
            offset: 5
        leadings: ~
        trailings: ~
      operator:
        - 42
      right:
        node_type: parenthesis
        statement:
          node_type: bin
          left:
            node_type: number
            value:
              - 46
              - 53
            loc:
              start:
                line: 1
                column: 10
                offset: 10
              end:
                line: 1
                column: 10
                offset: 10
            leadings: ~
            trailings: ~
          operator:
            - 43
          right:
            node_type: number
            value:
              - 48
              - 120
              - 50
              - 101
              - 52
              - 53
            loc:
              start:
                line: 1
                column: 15
                offset: 15
              end:
                line: 1
                column: 15
                offset: 15
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 13
              offset: 13
            end:
              line: 1
              column: 15
              offset: 15
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 9
            offset: 9
          end:
            line: 1
            column: 21
            offset: 21
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 21
          offset: 21
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 21
        offset: 21
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 22
    offset: 22
leadings: ~
trailings: ~
