crates/backyard-parser/tests/snapshots/parenthesis__var.snap
---
source: crates/backyard-parser/tests/parenthesis.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator: Default
    right:
      node_type: cast
      cast_type: Int
      expression:
        node_type: variable
        name:
          node_type: identifier
          name:
            - 97
          loc:
            start:
              line: 1
              column: 11
              offset: 11
            end:
              line: 1
              column: 12
              offset: 12
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 11
            offset: 11
          end:
            line: 1
            column: 12
            offset: 12
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 11
          offset: 11
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 1
        column: 11
        offset: 11
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 13
    offset: 13
leadings: ~
trailings: ~
